--- a/ProjetoRecuperação/src/br/edu/ifro/view/Principal.fxml
+++ b/ProjetoRecuperação/src/br/edu/ifro/view/Principal.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="br.edu.ifro.PrincipalController">
+<AnchorPane id="AnchorPane" prefHeight="547.0" prefWidth="320" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifro.controller.PrincipalController">
     <children>
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
       <TextField fx:id="txt1" layoutX="14.0" layoutY="43.0" />
@@ -14,10 +14,17 @@
       <Label layoutX="14.0" layoutY="14.0" text="Numero 1" />
       <Label layoutX="14.0" layoutY="80.0" text="Numero 2" />
       <Button layoutX="202.0" layoutY="110.0" mnemonicParsing="false" onAction="#soma" text="+" />
-      <Label layoutX="21.0" layoutY="137.0" text="Resultado:" />
+      <Label layoutX="13.0" layoutY="137.0" text="Resultado:" />
       <TextField fx:id="txtResultado" layoutX="14.0" layoutY="154.0" />
       <Button layoutX="240.0" layoutY="110.0" mnemonicParsing="false" onAction="#subtracao" prefHeight="25.0" prefWidth="25.0" text="-" />
       <Button layoutX="240.0" layoutY="65.0" mnemonicParsing="false" onAction="#divisao" prefHeight="25.0" prefWidth="25.0" text="/" />
-      <Button layoutX="202.0" layoutY="66.0" mnemonicParsing="false" onAction="#mitiplicacao" prefHeight="25.0" prefWidth="25.0" text="*" />
+      <Button layoutX="202.0" layoutY="66.0" mnemonicParsing="false" onAction="#mutiplicacao" prefHeight="25.0" prefWidth="25.0" text="*" />
+      <TextField fx:id="txtModelo" layoutX="14.0" layoutY="249.0" />
+      <TextField fx:id="txtAno" layoutX="14.0" layoutY="309.0" />
+      <TextField fx:id="txtCor" layoutX="14.0" layoutY="359.0" />
+      <Button layoutX="202.0" layoutY="321.0" mnemonicParsing="false" onAction="#gravar" prefHeight="25.0" prefWidth="54.0" text="Gravar" />
+      <Label layoutX="13.0" layoutY="226.0" text="Motelo" />
+      <Label layoutX="14.0" layoutY="282.0" text="Ano" />
+      <Label layoutX="15.0" layoutY="338.0" text="Cor" />
     </children>
 </AnchorPane>
